--- a/app/src/main/res/layout/item_high_score.xml
+++ b/app/src/main/res/layout/item_high_score.xml
@@ -81,7 +81,7 @@
             android:gravity="end"
             android:lines="1"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            app:highScoreStatus="@{viewState.status}" />
+            app:gameResult="@{viewState.status}" />
 
     </LinearLayout>
 </layout>
