--- a/app/src/main/res/layout/activity_game_old.xml
+++ b/app/src/main/res/layout/activity_game_old.xml
@@ -44,7 +44,7 @@
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/fragment"
-            android:name="by.klnvch.link5dots.ui.game.GameFragment"
+            android:name="by.klnvch.link5dots.multiplayer.activities.GameFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
