--- a/app/src/main/res/layout/game_board_old.xml
+++ b/app/src/main/res/layout/game_board_old.xml
@@ -21,15 +21,7 @@
   ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
   ~ SOFTWARE.
   -->
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <data>
-
-        <variable
-            name="viewState"
-            type="by.klnvch.link5dots.ui.game.GameViewState" />
-    </data>
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -39,8 +31,7 @@
         <by.klnvch.link5dots.ui.game.GameView
             android:id="@+id/gameView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:setGameBoardViewState="@{viewState.boardViewState}" />
+            android:layout_height="match_parent" />
 
         <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:id="@+id/gameInfo"
@@ -62,8 +53,7 @@
                     android:layout_height="wrap_content"
                     android:drawablePadding="8dp"
                     android:gravity="center"
-                    android:text="@{viewState.infoViewState.user1Name}"
-                    app:setLeftDrawable="@{viewState.infoViewState.user1Dot}" />
+                    android:text="@string/unknown" />
 
                 <TextView
                     android:id="@+id/textUser2"
@@ -71,8 +61,7 @@
                     android:layout_height="wrap_content"
                     android:drawablePadding="8dp"
                     android:gravity="center"
-                    android:text="@{viewState.infoViewState.user2Name}"
-                    app:setLeftDrawable="@{viewState.infoViewState.user2Dot}" />
+                    android:text="@string/computer" />
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
