--- a/app/src/main/res/navigation/menu_nav_graph.xml
+++ b/app/src/main/res/navigation/menu_nav_graph.xml
@@ -52,7 +52,7 @@
     </fragment>
     <activity
         android:id="@+id/mainActivity"
-        android:name="by.klnvch.link5dots.ui.game.BotGameActivity"
+        android:name="by.klnvch.link5dots.ui.game.activities.BotGameActivity"
         android:label="@string/app_name" />
     <activity
         android:id="@+id/scoresActivity"
@@ -68,7 +68,7 @@
         android:label="@string/help" />
     <activity
         android:id="@+id/twoPlayersActivity"
-        android:name="by.klnvch.link5dots.ui.game.TwoPlayersGameActivity"
+        android:name="by.klnvch.link5dots.ui.game.activities.TwoPlayersGameActivity"
         android:label="@string/menu_two_players" />
     <activity
         android:id="@+id/settingsActivity"
