--- a/app/src/main/res/layout-land/fragment_game_picker.xml
+++ b/app/src/main/res/layout-land/fragment_game_picker.xml
@@ -26,19 +26,31 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+
+        <variable
+            name="viewState"
+            type="by.klnvch.link5dots.multiplayer.activities.PickerViewState" />
+
+        <variable
+            name="listener"
+            type="by.klnvch.link5dots.multiplayer.activities.OnPickerClickListener" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/paper_tiled"
         android:keepScreenOn="true"
-        android:padding="32dp"
-        tools:context="by.klnvch.link5dots.multiplayer.activities.GameActivityOnline">
+        android:padding="32dp">
 
         <ToggleButton
             android:id="@+id/buttonCreate"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:checked="false"
+            android:checked="@{viewState.createButtonChecked}"
+            android:enabled="@{viewState.createButtonEnabled}"
+            android:onClick="@{listener::onCreateButtonClicked}"
             android:textOff="@string/create"
             android:textOn="@string/delete"
             app:layout_constraintEnd_toEndOf="@+id/guidelineVertical"
@@ -69,8 +81,10 @@
             android:id="@+id/textStatusLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:enabled="@{viewState.createButtonEnabled}"
             android:maxLines="1"
             android:text="@string/name"
+            android:visibility="@{viewState.statusVisibility}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textBluetoothVisibility" />
 
@@ -78,8 +92,10 @@
             android:id="@+id/textStatusColon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:enabled="@{viewState.createButtonEnabled}"
             android:maxLines="1"
             android:text="@string/colon"
+            android:visibility="@{viewState.statusVisibility}"
             app:layout_constraintStart_toEndOf="@+id/textStatusLabel"
             app:layout_constraintTop_toBottomOf="@+id/textBluetoothVisibility" />
 
@@ -87,8 +103,10 @@
             android:id="@+id/textStatusValue"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:enabled="@{viewState.createButtonEnabled}"
             android:maxLines="2"
             android:text="@string/name_not_set"
+            android:visibility="@{viewState.statusVisibility}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textStatusLabel" />
 
@@ -98,7 +116,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:indeterminate="true"
-            android:visibility="invisible"
+            android:visibility="@{viewState.progressCreateVisibility}"
             app:layout_constraintBottom_toTopOf="@+id/separator"
             app:layout_constraintEnd_toEndOf="@+id/guidelineVertical"
             app:layout_constraintStart_toStartOf="parent"
@@ -118,7 +136,9 @@
             android:id="@+id/buttonScan"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:checked="false"
+            android:checked="@{viewState.scanButtonChecked}"
+            android:enabled="@{viewState.scanButtonEnabled}"
+            android:onClick="@{listener::onScanButtonClicked}"
             android:textOff="@string/scan"
             android:textOn="@string/cancel"
             app:layout_constraintEnd_toEndOf="@+id/guidelineVertical"
@@ -131,7 +151,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:indeterminate="true"
-            android:visibility="invisible"
+            android:visibility="@{viewState.scanProgressVisibility}"
             app:layout_constraintEnd_toEndOf="@+id/guidelineVertical"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/buttonScan" />
