--- a/app/src/main/res/layout/fragment_game_picker.xml
+++ b/app/src/main/res/layout/fragment_game_picker.xml
@@ -25,19 +25,31 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+
+        <variable
+            name="viewState"
+            type="by.klnvch.link5dots.multiplayer.activities.PickerViewState" />
+
+        <variable
+            name="listener"
+            type="by.klnvch.link5dots.multiplayer.activities.OnPickerClickListener" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/paper_tiled"
         android:keepScreenOn="true"
-        android:padding="32dp"
-        tools:context="by.klnvch.link5dots.multiplayer.activities.GameActivityOnline">
+        android:padding="32dp">
 
         <ToggleButton
             android:id="@+id/buttonCreate"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:checked="false"
+            android:checked="@{viewState.createButtonChecked}"
+            android:enabled="@{viewState.createButtonEnabled}"
+            android:onClick="@{listener::onCreateButtonClicked}"
             android:textOff="@string/create"
             android:textOn="@string/delete"
             app:layout_constraintEnd_toEndOf="parent"
@@ -68,8 +80,10 @@
             android:id="@+id/textStatusLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:enabled="@{viewState.createButtonEnabled}"
             android:maxLines="1"
             android:text="@string/name"
+            android:visibility="@{viewState.statusVisibility}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textBluetoothVisibility" />
 
@@ -77,8 +91,10 @@
             android:id="@+id/textStatusColon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:enabled="@{viewState.createButtonEnabled}"
             android:maxLines="1"
             android:text="@string/colon"
+            android:visibility="@{viewState.statusVisibility}"
             app:layout_constraintStart_toEndOf="@+id/textStatusLabel"
             app:layout_constraintTop_toBottomOf="@+id/textBluetoothVisibility" />
 
@@ -88,8 +104,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
+            android:enabled="@{viewState.createButtonEnabled}"
             android:maxLines="2"
             android:text="@string/name_not_set"
+            android:visibility="@{viewState.statusVisibility}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textStatusColon"
             app:layout_constraintTop_toBottomOf="@+id/textBluetoothVisibility" />
@@ -100,7 +118,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:indeterminate="true"
-            android:visibility="invisible"
+            android:visibility="@{viewState.progressCreateVisibility}"
             app:layout_constraintBottom_toTopOf="@+id/separator"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -120,7 +138,9 @@
             android:id="@+id/buttonScan"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:checked="false"
+            android:checked="@{viewState.scanButtonChecked}"
+            android:enabled="@{viewState.scanButtonEnabled}"
+            android:onClick="@{listener::onScanButtonClicked}"
             android:textOff="@string/scan"
             android:textOn="@string/cancel"
             app:layout_constraintEnd_toEndOf="parent"
@@ -133,7 +153,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:indeterminate="true"
-            android:visibility="invisible"
+            android:visibility="@{viewState.scanProgressVisibility}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/buttonScan" />
@@ -142,7 +162,6 @@
             android:id="@+id/listTargets"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
